--- a/gmao_teams/templates/gmao_teams_old/portefeuille_equipe.html
+++ b/gmao_teams/templates/gmao_teams_old/portefeuille_equipe.html
@@ -37,7 +37,7 @@
         Liste des doléances
     </a>
     {% if user.role == 'ADMIN' %}
-        <a href="{% url 'equipes:liste_equipes' %}"
+        <a href="{% url 'gmao_teams:liste_equipes' %}"
            class="btn btn-outline-success text-center text-light border-light btn-sm mx-2" id="btn-nav">
             Gestion des équipes
         </a>
@@ -67,7 +67,7 @@
                     <td>{{ doleance.panne_declarer }}</td>
                     <td>{{ doleance.date_transmission }}</td>
                     <td>
-                        <a href="{% url 'prendre_en_charge_doleance' equipe.id doleance.id %}">Prendre en charge</a>
+                        <a href="{% url 'gmao:prendre_en_charge' doleance.id %}">Prendre en charge</a>
                     </td>
                 </tr>
             {% endfor %}
