--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -199,7 +199,7 @@
                     language: {
                         {#url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/French.json'#}
                         //url: "https://cdn.jsdelivr.net/npm/datatables.net-plugins@1.10.24/i18n/French.json"
-
+                        url: "{% static 'js/French.json' %}"
                     },
                     responsive: true,
                     ordering: false,
