--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -199,7 +199,7 @@
                         {
                             data: 'numero_fiche',
                             render: function (data, type, row) {
-                                return data.split('00');
+                                return data.splice(':1');
                             }
                         },
                         {data: 'debut_travail'},
