--- a/gmao/static/gmao/css/main.css
+++ b/gmao/static/gmao/css/main.css
@@ -6,7 +6,7 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    font-size: x-small;
+    font-size: 80%;
     font-family: Arial, sans-serif;
 }
 
