--- a/gmao/templates/gmao/toutes_les_doleances.html
+++ b/gmao/templates/gmao/toutes_les_doleances.html
@@ -116,7 +116,10 @@
                 ],
                 "language": {
                     "url": "//cdn.datatables.net/plug-ins/1.10.25/i18n/French.json"
-                }
+                },
+                "responsive": true,
+                "ordering": false,
+                "sort": false,
             });
 
             $('#yearFilter, #monthFilter, #clientFilter').change(function () {
