--- a/gmao_teams/templates/gmao_teams/gestion_equipes.html
+++ b/gmao_teams/templates/gmao_teams/gestion_equipes.html
@@ -54,6 +54,11 @@
                             </div>
                             <div class="col-md-6">
                                 <h4>Techniciens disponibles</h4>
+                                <div class="input-group mb-3">
+                                    <label for="searchTechniciens"></label><input type="text" id="searchTechniciens"
+                                                                                  class="form-control"
+                                                                                  placeholder="Rechercher un technicien...">
+                                </div>
                                 <div id="technicienDispoSpinner" class="spinner-border text-primary" role="status"
                                      style="display: none;">
                                     <span class="sr-only">Chargement...</span>
