--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/themes/dark.min.css">
     {% block extra_css %}{% endblock extra_css %}
-    <title>MEI | {% block title %}G M A O {% endblock title %}</title>
+    <title>MEI&nbsp;| {% block title %}G M A O {% endblock title %}</title>
 </head>
 <body>
 <div class="wrapper">
