--- a/gmao/templates/gmao/liste_appareils_distributeurs.html
+++ b/gmao/templates/gmao/liste_appareils_distributeurs.html
@@ -152,17 +152,17 @@
 $(document).ready(function() {
     {% if user.role == 'ADMIN' %}
     // Chargement des stations et modèles
-    $.get("{% url 'get_stations' %}", function(data) {
+    $.get("{% url 'gmao:get_stations' %}", function(data) {
         $('#station').html(data.map(station => `<option value="${station.id}">${station.libelle_station}</option>`).join(''));
     });
 
-    $.get("{% url 'get_modeles_ad' %}", function(data) {
+    $.get("{% url 'gmao:get_modeles_ad' %}", function(data) {
         $('#modele').html(data.map(modele => `<option value="${modele.id}">${modele.libelle_modele}</option>`).join(''));
     });
 
     // Fonction pour ajouter un champ de pistolet
     function ajouterChampPistolet(containerId, orientation) {
-        var newField = `
+        const newField = `
             <div class="form-row pistolet-row">
                 <div class="col">
                     <select class="form-control produit" required>
@@ -180,7 +180,7 @@ $(document).ready(function() {
         $(`#${containerId}`).append(newField);
 
         // Charger les produits pour le nouveau champ
-        $.get("{% url 'get_produits' %}", function(data) {
+        $.get("{% url 'gmao:get_produits' %}", function(data) {
             $(`#${containerId} .produit:last`).html(data.map(produit => `<option value="${produit.id}">${produit.nom_produit}</option>`).join(''));
         });
     }
@@ -200,7 +200,7 @@ $(document).ready(function() {
 
     // Sauvegarder le distributeur
     $('#sauvegarderDistributeur').click(function() {
-        var formData = {
+        const formData = {
             station: $('#station').val(),
             modele_ad: $('#modele').val(),
             num_serie: $('#numSerie').val(),
@@ -228,7 +228,7 @@ $(document).ready(function() {
         });
 
         $.ajax({
-            url: "{% url 'ajouter_distributeur' %}",
+            url: "{% url 'gmao:ajouter_distributeur' %}",
             type: 'POST',
             contentType: 'application/json',
             data: JSON.stringify(formData),
@@ -249,7 +249,7 @@ $(document).ready(function() {
     // Gérer la modification d'un distributeur
     $('.modifier-appareil').click(function() {
         var id = $(this).data('id');
-        $.get("{% url 'get_distributeur' 0 %}".replace('0', id), function(data) {
+        $.get("{% url 'gmao:get_distributeur' 0 %}".replace('0', id), function(data) {
             $('#station').val(data.station);
             $('#modele').val(data.modele_ad);
             $('#numSerie').val(data.num_serie);
@@ -276,7 +276,7 @@ $(document).ready(function() {
         var id = $(this).data('id');
         if (confirm('Êtes-vous sûr de vouloir supprimer ce distributeur ?')) {
             $.ajax({
-                url: "{% url 'supprimer_distributeur' 0 %}".replace('0', id),
+                url: "{% url 'gmao:supprimer_distributeur' 0 %}".replace('0', id),
                 type: 'POST',
                 headers: {'X-CSRFToken': '{{ csrf_token }}'},
                 success: function(response) {
@@ -297,9 +297,9 @@ $(document).ready(function() {
     {% if user.role == 'TECH' %}
     // Afficher les détails d'un appareil pour les techniciens
     $('.details-appareil').click(function() {
-        var id = $(this).data('id');
-        $.get("{% url 'get_distributeur' 0 %}".replace('0', id), function(data) {
-            var detailsHtml = `
+        const id = $(this).data('id');
+        $.get("{% url 'gmao:get_distributeur' 0 %}".replace('0', id), function(data) {
+            const detailsHtml = `
                 <p><strong>Station:</strong> ${data.piste}</p>
                 <p><strong>Modèle:</strong> ${data.modele_ad}</p>
                 <p><strong>Numéro de série:</strong> ${data.num_serie}</p>
